Fixed the input manager on windows

There are two points there:
1) Windows defers the mouse events generated by the ignored tablet events,
   so the former ones arrive reordered.
2) The flow of tablet move events is too high, so there is a special option
   "hiResInputEvents" introduced in the action to handle it. All the actions
   except painting itself use compressed mouse move events instead.

BUG:306528